# graph_explorer

./: Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt  setup.bat  setup.sh
api/: pyproject.toml
api/src/api/: test.py
api/src/api/components/: data_source.py  plugin.py  visualizer.py
api/src/api/models/: data.py  edge.py  graph.py  node.py
core/: pyproject.toml
core/src/core/: application.py  constants.py  graph_context.py  plugin_recognition.py
core/src/core/commands/: command.py  command_names.py  command_processor.py  filter_commands.py  graph_commands.py  workspace_commands.py
core/src/core/config/: application_config.py  constants.py
core/src/core/models/: filter.py  filterOperator.py  workspace.py
core/src/core/repositories/: graph_repository.py  workspace_repository.py
core/src/core/use_cases/: commands.py  graph_context.py  graph_context_factory.py  plugin_recognition.py  workspace_context.py  workspaces.py
graph_explorer/: pyproject.toml
graph_explorer/graph_explorer/: apps.py  commands.py  urls.py  views.py
graph_explorer/graph_explorer/management/commands/: graph_cli.py
graph_explorer/graph_explorer/static/: filter_form.js  style.css
graph_explorer/graph_explorer/static/js/: cli_modal.js  error_modal.js  filter_form.js  main_view.script.js  (+5 more)
graph_explorer/graph_explorer/templates/: base.html  bird_view.html  cli_modal.html  error_modal.html  index.html  tree_view.html  workspace_form.html
graph_explorer/sites/: asgi.py  settings.py  urls.py  wsgi.py
neo4j/: docker-compose.yml
plugins/datasource/empty_datasource/: pyproject.toml
plugins/datasource/empty_datasource/src/empty_datasource/: implementation.py
plugins/datasource/postgresql_datasource/: pyproject.toml
plugins/datasource/rdf_datasource/: pyproject.toml
plugins/datasource/rdf_datasource/src/rdf_datasource/: implementation.py  models.py  services.py
plugins/datasource/spotify_datasource/: pyproject.toml
plugins/datasource/spotify_datasource/src/spotify_datasource/: MANIFEST.IN  implementation.py  services.py  utils.py
plugins/visualizazer/test_visualizer/: pyproject.toml
plugins/visualizazer/test_visualizer/src/test_visualizer/: implementation.py
plugins/visualizer/block_visualizer/: pyproject.toml
plugins/visualizer/block_visualizer/src/block_visualizer/: implementation.py
plugins/visualizer/block_visualizer/src/block_visualizer/templates/: block_visualizer_template.html
plugins/visualizer/simple_visualizer/: pyproject.toml
plugins/visualizer/simple_visualizer/src/simple_visualizer/: implementation.py  json_serializer.py
plugins/visualizer/simple_visualizer/src/simple_visualizer/templates/: simple_visualizer_template.html
(+6 files in other folders)
